--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -15,9 +15,15 @@ services:
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
+    secrets:
+      - grafana_admin_user
+      - grafana_admin_password
     environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_USER_FILE=/run/secrets/grafana_admin_user
+      - GF_SECURITY_ADMIN_PASSWORD_FILE=/run/secrets/grafana_admin_password
+      - GF_SECURITY_ALLOW_EMBEDDING=true
+      - GF_AUTH_ANONYMOUS_ENABLED=false
+      - GF_USERS_DEFAULT_THEME=dark
     volumes:
       - ./grafana/provisioning:/etc/grafana/provisioning:ro
       - ./grafana/dashboards:/var/lib/grafana/dashboards:ro
@@ -25,3 +31,9 @@ services:
       - "3000:3000"
     depends_on:
       - prometheus
+
+secrets:
+  grafana_admin_user:
+    file: ./secrets/grafana_admin_user.txt
+  grafana_admin_password:
+    file: ./secrets/grafana_admin_password.txt
